# network-inference-pipeline

./: .gitignore  .gitmodules  README.adoc  dvc.yaml  pyproject.toml
artifacts/noisyR-paper/: dvc.yaml
src/: clean_Cuomo.sh  clean_Yang.sh  denoise.R  denoise.sh  extract_data.sh  fuse_samples.R  fuse_samples_foreach.sh  infer_foreach_slice.sh  plot_for_network.R  slice.sh
src/BTR/: infer_network.R
src/GENIE3-R/: infer_network.R
src/GRNBoost2/: infer_network.py
src/LEAP/: infer_network.R
src/NetworkInference.jl/: infer_networks.sh
src/analysis/: Cuomo_variants.csv  analyze_for_network_variants.R  analyze_foreach_slice.sh  calculate_node_degrees.R  data_variants.csv  foreach_network.sh  load_genie3r_network.function.R  load_leap_network.function.R
src/inference/: infer_foreach_slice.sh
src/inference/GENIE3-R/: infer_network.R
src/inference/LEAP/: infer_network.R
src/inference/NetworkInference.jl/: infer_network.jl
src/plotting/: Yang_variants.csv  load_grnboost2_network.function.R  load_network_inference_jl_network.function.R  plot_for_network.R  plot_for_network_variants.R  plot_foreach_network.sh  plot_foreach_slice.sh
