[tool.poetry]
name = "network-inference-pipeline"
version = "0.1.0"
description = "Applying network-inference-toolbox to RNAseq data"
authors = ["lmshk <lmshk@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^1.11.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
